@@ -267,6 +267,9 @@ polygon.</dd>
 <dt><code class="docutils literal"><span class="pre">area_intersects_area(area-mask-file)</span></code></dt>
 <dd>Exclude measurements whose area does not overlap with one of the
 areas of the area mask file.</dd>
+<dt><code class="docutils literal"><span class="pre">bin()</span></code></dt>
+<dd>For all variables in a product perform an averaging in the time
+dimension such that all samples end up in a single bin.</dd>
 <dt><code class="docutils literal"><span class="pre">bin(variable)</span></code></dt>
 <dd><p class="first">For all variables in a product perform an averaging in the time
 dimension such that all samples in the same bin get averaged.
