@@ -175,6 +175,7 @@ void harp_product_remove_all_variables(harp_product *product);
 int harp_product_get_datetime_range(const harp_product *product, double *datetime_start, double *datetime_stop);
 int harp_product_get_derived_bounds_for_grid(harp_product *product, harp_variable *grid, harp_variable **bounds);
 int harp_product_get_storage_size(const harp_product *product, int with_attributes, int64_t *size);
+int harp_product_bin_full(harp_product *product);
 int harp_product_bin_with_collocated_dataset(harp_product *product, harp_collocation_result *collocation_result);
 int harp_product_bin_with_variable(harp_product *product, const char *variable_name);
 
